replace leftover wikidot url about email templates
closes #3017

--- a/email/email-en.tmpl
+++ b/email/email-en.tmpl
@@ -1,7 +1,7 @@
 ##
 ## Default Email template for SABnzbd
 ## This a Cheetah template
-## Documentation: http://sabnzbd.wikidot.com/email-templates
+## Documentation: https://sabnzbd.org/wiki/extra/email-templates
 ##
 ## Newlines and whitespace are significant!
 ##
