--- a/email/rss-en.tmpl
+++ b/email/rss-en.tmpl
@@ -1,7 +1,7 @@
 ##
 ## RSS Email template for SABnzbd
 ## This a Cheetah template
-## Documentation: http://sabnzbd.wikidot.com/email-templates
+## Documentation: https://sabnzbd.org/wiki/extra/email-templates
 ##
 ## Newlines and whitespace are significant!
 ##
