Fix typos Found via `codespell -q 3 -S "*.po,*.pot,*.min.js" -L allo,collet,fo,parm,ciph,datas,parms,reenabled,re-use,re-used,re-using,sav,tage`

--- a/interfaces/Config/templates/config_server.tmpl
+++ b/interfaces/Config/templates/config_server.tmpl
@@ -628,7 +628,7 @@
                             })
                         }
                         if(event.data === 'hide_server') {
-                            // Hide and don't load anymore untill the next release
+                            // Hide and don't load anymore until the next release
                             jQuery('.Servers .server-frame').hide()
                             localStorage.setItem("server-frame-hide-$version", "hide")
                         }
