--- a/interfaces/Glitter/templates/include_queue.tmpl
+++ b/interfaces/Glitter/templates/include_queue.tmpl
@@ -15,10 +15,10 @@
             <span data-bind="text: queueDataLeft"></span> $T('Glitter-left')
         </div>
         <!-- /ko -->
-        <!-- ko if: (quotaLimit() != 0)  -->
+        <!-- ko if: (parseInt(quotaLimit()) != 0)  -->
         <div class="info-container-box">
             <span data-bind="css: { 'queue-error-info' : (parseInt(quotaLimitLeft())<=0) }">
-                <span class="glyphicon glyphicon-log-in"></span> <span data-bind="text: quotaLimitLeft"></span>B / <span data-bind="text: quotaLimit"></span>B $T('quota-left')
+                <span class="glyphicon glyphicon-log-in"></span> <span data-bind="text: quotaLimitLeft"></span> / <span data-bind="text: quotaLimit"></span> $T('quota-left')
             </span>
         </div>
         <!-- /ko -->
