--- a/interfaces/Config/templates/config_rss.tmpl
+++ b/interfaces/Config/templates/config_rss.tmpl
@@ -373,6 +373,17 @@
                     <!--#end if#-->
                 </div>
             </form>
+            <form action="update_rss_feed_delay" method="post">
+                <input type="hidden" name="apikey" value="$apikey" />
+                <input type="hidden" name="feed" value="$active_feed" />
+                <div class="field-pair">
+                    <label class="config" for="feed_delay">$T('opt-feed_delay')</label>
+                    <input type="number" name="feed_delay" id="feed_delay" value="$rss[$active_feed]['feed_delay']" min="0" /> <i>$T('minutes')</i>
+                    <button type="submit" class="btn btn-default Save" style="margin-left: 30px;"><span class="glyphicon glyphicon-ok"></span> $T('button-save')</button>
+                    <span class="desc">$T('explain-feed_delay')</span>
+                </div>
+                <div></div>
+            </form>
         </div>
     </div>
     <br/>
