Persist the Permanently delete checkbox
On Archive page, never even ask the question.
Yeah, if you combine History+Archive it will be always Permanently deleted. So be it.

--- a/interfaces/Glitter/templates/include_overlays.tmpl
+++ b/interfaces/Glitter/templates/include_overlays.tmpl
@@ -681,9 +681,9 @@
                     </ul>
                 </div>
                 <div class="modal-footer">
-                     <div class="checkbox">
+                     <div class="checkbox" data-bind="visible: !history.showArchive()">
                         <label>
-                            <input type="checkbox" data-bind="checked: history.showArchive()"> <span>$T('permanently-delete')</span>
+                            <input type="checkbox" data-bind="checked: history.permanentlyDelete"> <span>$T('permanently-delete')</span>
                         </label>
                     </div>
                     <button type="button" class="btn btn-default" data-dismiss="modal">$T('cancel')</button>
@@ -802,7 +802,7 @@
             <div class="modal-footer">
                 <div class="checkbox">
                     <label>
-                        <input type="checkbox" data-bind="checked: history.showArchive()"> <span>$T('permanently-delete')</span>
+                        <input type="checkbox" data-bind="checked: history.permanentlyDelete"> <span>$T('permanently-delete')</span>
                     </label>
                 </div>
             </div>
