--- a/interfaces/Config/templates/config_general.tmpl
+++ b/interfaces/Config/templates/config_general.tmpl
@@ -8,7 +8,7 @@
             <input type="checkbox" id="advanced-settings-button" name="advanced-settings-button"> $T('button-advanced')
         </label>
     </div>
-    <form action="general/save" method="post" name="fullform" class="fullform" autocomplete="off">
+    <form action="general/save" method="get" name="fullform" class="fullform" autocomplete="off">
         <input type="hidden" id="apikey" name="apikey" value="$apikey" />
         <input type="hidden" id="ajax" name="ajax" value="1" />
         <input type="hidden" name="output" value="json" />
