Add way to mark job as Completed and remove Incomplete
Closes #1174

--- a/interfaces/Glitter/templates/main.tmpl
+++ b/interfaces/Glitter/templates/main.tmpl
@@ -62,6 +62,7 @@
             glitterTranslate.deleteMsg = "$T('nzo-delete')";
             glitterTranslate.removeDown = "$T('confirm')";
             glitterTranslate.removeDow1 = "$T('confirm')";
+            glitterTranslate.markComplete = "$T('button-mark-completed')";
             glitterTranslate.renameAbort = "$T('Glitter-confirmAbortDirectUnpack')\n$T('confirm')";
             glitterTranslate.retryAll = "$T('link-retryAll')?";
             glitterTranslate.fetch = "$T('Glitter-fetch')";
