--- a/interfaces/Glitter/templates/static/stylesheets/glitter.css
+++ b/interfaces/Glitter/templates/static/stylesheets/glitter.css
@@ -1097,6 +1097,13 @@ tr.queue-item>td:first-child>a {
     font-weight: bold;
 }
 
+.mark-completed-link {
+    font-weight: bold !important;
+    color: #28a745 !important;
+    text-decoration: underline;
+    margin-left: 10px;
+}
+
 .history-status-hidden {
     display: none;
 }
