--- a/interfaces/Glitter/templates/include_queue.tmpl
+++ b/interfaces/Glitter/templates/include_queue.tmpl
@@ -187,6 +187,12 @@
                 <input type="radio" name="multiedit-status" value="pause" id="multiedit-pause" data-bind="event: { change: queue.doMultiEditUpdate }" />
                 <span class="glyphicon glyphicon-pause" title="$T('link-pause')" data-tooltip="true" data-placement="top"></span>
             </label>
+            <a href="#" class="hover-button" title="$T('Glitter-top')" data-bind="click: queue.doMultiMoveToTop" data-tooltip="true" data-placement="top">
+                <span class="glyphicon glyphicon-chevron-up"></span>
+            </a>
+            <a href="#" class="hover-button" title="$T('Glitter-bottom')" data-bind="click: queue.doMultiMoveToBottom" data-tooltip="true" data-placement="top">
+                <span class="glyphicon glyphicon-chevron-down"></span>
+            </a>
             <span class="label label-default" data-bind="text: queue.multiEditItems().length">0</span>
         </div>
         <div class="add-nzb-inputbox-clear"></div>
