Rework handling of GET and POST request parameters

--- a/interfaces/Config/templates/login/main.tmpl
+++ b/interfaces/Config/templates/login/main.tmpl
@@ -32,7 +32,7 @@
                     <span class="glyphicon glyphicon-question-sign"></span>
                 </a>
             </div>
-            <form class="form-signin" action="./" method="post">
+            <form class="form-signin" action="./login" method="post">
                 <!--#if $error#-->
                 <div class="alert alert-danger" role="alert">$error</div>
                 <!--#end if#-->
