Config Server to new layout

--- a/interfaces/Config/templates/config_server.tmpl
+++ b/interfaces/Config/templates/config_server.tmpl
@@ -578,7 +578,7 @@
 
         jQuery('.delServer').click(function(){
             if( confirm("$T('confirm')") ) {
-                jQuery(this).parents('form:first').attr('action','delServer').submit();
+                jQuery(this).parents('form:first').attr('action','server/delete_server').submit();
                 // Let us leave!
                 formWasSubmitted = true;
                 formHasChanged = false;
@@ -589,7 +589,7 @@
 
         jQuery('.clrServer').click(function(){
             if( confirm("$T('confirm')") ) {
-                jQuery(this).parents('form:first').attr('action','clrServer').submit();
+                jQuery(this).parents('form:first').attr('action','server/clear_server').submit();
                 // Let us leave!
                 formWasSubmitted = true;
                 formHasChanged = false;
@@ -602,7 +602,7 @@
             var whichServer = jQuery(this).attr("name");
             jQuery.ajax({
                 type: "POST",
-                url: "toggleServer",
+                url: "server/toggle_server",
                 data: {server: whichServer, apikey: "$apikey" }
             }).done(function() {
                 // Let us leave!
