--- a/interfaces/Config/templates/config_notify.tmpl
+++ b/interfaces/Config/templates/config_notify.tmpl
@@ -187,7 +187,7 @@
                     <td><label for="apprise_enable"> $T('opt-apprise_enable')</label></td>
                 </tr>
             </table>
-            <em>$T('explain-apprise_enable')</em><br>
+            <p>$T('explain-apprise_enable')</p>
             <p>$T('version'): ${apprise.__version__}</p>
 
             $show_cat_box('apprise')
@@ -197,7 +197,7 @@
                 <div class="field-pair">
                     <label class="config" for="apprise_urls">$T('opt-apprise_urls')</label>
                     <input type="text" name="apprise_urls" id="apprise_urls" value="$apprise_urls" />
-                    <span class="desc">$T('explain-apprise_urls'). <br>$T('readwiki')</span>
+                    <span class="desc">$T('explain-apprise_urls')</span>
                 </div>
                 <div class="field-pair">
                     <span class="desc">$T('explain-apprise_extra_urls')</span>
